fixed stopwatch spacing and lap display

--- a/css/stopwatch.css
+++ b/css/stopwatch.css
@@ -24,36 +24,7 @@ body {
     overflow: hidden;
 }
 
-.timer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-}
-.timer p {
-    font-size: 75px;
-
-}
-
-.btn-container {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    position: relative;
-    top: -25vh;
-}
-.btn {
-    text-decoration: none;
-    margin: 0 2vw;
-    padding: 5px 10px;
-    text-transform: uppercase;
-    font-weight: bold;
-    border: 2px solid var(--text-color);
-    background-color: rgba(0, 0, 0, 0);
-    color: var(--text-color);
-    border-radius: 5px;
-}
-
+/* SIDENAV */
 .sidenav {
     height: 100%;
     width: 0;
@@ -65,7 +36,6 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
 }
-
 .sidenav a,
 .bar-btn {
     text-decoration: none;
@@ -113,4 +83,75 @@ body {
 }
 .border {
     border-bottom: 2px solid var(--sidenav-border);
+}
+.show-dropdown {
+    background-color: var(--sidenav-hover);
+}
+
+/* MAIN CONTAINER */
+.main-container {
+    display: flex;
+    justify-content: center;
+}
+.wrapper {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* TIMER */
+.timer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.timer p {
+    font-size: 5em;
+
+}
+
+/* BUTTONS */
+/* TODO: add hover transition */
+.btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    position: relative;
+    top: -2em;
+}
+.btn {
+    text-decoration: none;
+    margin: 0 2vw;
+    padding: 5px 10px;
+    text-transform: uppercase;
+    font-weight: bold;
+    border: 2px solid var(--text-color);
+    background-color: rgba(0, 0, 0, 0);
+    color: var(--text-color);
+    border-radius: 5px;
+}
+
+/* LAPS */
+.laps {
+    width: 100%;
+    font-size: 1.5em;
+    position: absolute;
+    bottom: 9em;
+    /* right: -7em; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:fit-content;
+}
+ul.lap-record {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 95%;
+}
+ul.lap-record li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
 }
